--- a/app/views/client_mailer/reservation_confirmation_email.html.erb
+++ b/app/views/client_mailer/reservation_confirmation_email.html.erb
@@ -3,12 +3,12 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-    <h1>Welcome to Monterail Cinema, <%= @client.name %></h1>
+    <h1>Welcome to Monterail Cinema, </h1>
     <p>
       Your reservation was succesfull and your tickets are waiting for you to be picked up at the cinema.
       Please make sure to pick them up 30 minutes before the seance.
-      Your seats are: <%=@reservation.seat%>
-      The price is: <%=@reservation.tickets%>
+      <%# Your seats are: <%=@reservation.seat%> %>
+      <%# The price is: <%=@reservation.tickets%> %>
     </p>
     <p>
       Enjoy the movie! <%= @url %>.
