added working email confirmation

--- a/app/views/client_mailer/reservation_confirmation_email.html.erb
+++ b/app/views/client_mailer/reservation_confirmation_email.html.erb
@@ -7,8 +7,7 @@
     <p>
       Your reservation was succesfull and your tickets are waiting for you to be picked up at the cinema.
       Please make sure to pick them up 30 minutes before the seance.
-      <%# Your seats are: <%=@reservation.seat%> %>
-      <%# The price is: <%=@reservation.tickets%> %>
+      Your seats are: <%=@reservation.seat %>
     </p>
     <p>
       Enjoy the movie! <%= @url %>.
